# py-list-chunk

./: CHANGELOG.md  README.md  pyproject.toml
src/philiprehberger_list_chunk/: __init__.py
tests/: test_list_chunk.py
