[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-list-chunk"
version = "0.1.5"
description = "Split iterables into evenly sized chunks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["list", "chunk", "split", "batch", "partition", "window"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-list-chunk#readme"
Repository = "https://github.com/philiprehberger/py-list-chunk"
Issues = "https://github.com/philiprehberger/py-list-chunk/issues"
Changelog = "https://github.com/philiprehberger/py-list-chunk/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_list_chunk"]
